syntax = "proto3";

package malenia;

option go_package = "proto/malenia";

service MaleniaService {
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {}
}

// Request message for the Healthcheck operation
message HealthCheckRequest {
  int32 request_value = 1;
}

// Response message for the Healthcheck operation
message HealthCheckResponse {
  bool health_status = 1;
}


